Test/git-issues/git-issue-3410/git-issue-3410f.dfy.expect
git-issue-3410f.dfy(6,19): Error: ghost variables such as i are allowed only in specification contexts. i was inferred to be ghost based on its declaration or initialization.
1 resolution/type errors detected in git-issue-3410f.dfy
